--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,10 +2,14 @@
   "name": "@saas/api",
   "version": "1.0.0",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/http/server.ts"
   },
   "dependencies": {
-    "@saas/auth": "file:../../packages/auth"
+    "@fastify/cors": "^11.1.0",
+    "@saas/auth": "file:../../packages/auth",
+    "fastify": "^5.6.0",
+    "fastify-type-provider-zod": "^6.0.0",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@saas/eslint-config": "file:../../config/eslint-config",
