--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,7 @@
     "@fastify/cors": "^11.1.0",
     "@prisma/client": "6.16.1",
     "@saas/auth": "file:../../packages/auth",
+    "bcryptjs": "^3.0.2",
     "fastify": "^5.6.0",
     "fastify-type-provider-zod": "^6.0.0",
     "zod": "^4.1.8"
@@ -16,6 +17,7 @@
     "@saas/eslint-config": "file:../../config/eslint-config",
     "@saas/prettier": "file:../../config/prettier",
     "@saas/tsconfig": "file:../../config/typescript-config",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^24.3.3",
     "prisma": "^6.16.1",
     "tsx": "^4.20.5"
