--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "zod": "^4.1.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.0.0",
     "@saas/eslint-config": "file:../../config/eslint-config",
     "@saas/prettier": "file:../../config/prettier",
     "@saas/tsconfig": "file:../../config/typescript-config",
@@ -21,6 +22,9 @@
     "@types/node": "^24.3.3",
     "prisma": "^6.16.1",
     "tsx": "^4.20.5"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "eslintConfig": {
     "extends": [
