--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@prisma/client": "6.16.1",
     "@saas/auth": "file:../../packages/auth",
     "bcryptjs": "^3.0.2",
