creating authentication middleware

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,7 +3,8 @@
   "include": [
     "src/**/*",
     "../../packages/auth/src/**/*",
-    "../../config/**/*"
+    "../../config/**/*",
+    "@types/**/*"
   ],
   "compilerOptions": {
     "baseUrl": ".",
