--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,6 +13,7 @@
     "@saas/auth": "file:../../packages/auth",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.6.0",
+    "fastify-plugin": "^5.0.1",
     "fastify-type-provider-zod": "^6.0.0",
     "zod": "^4.1.8"
   },
