--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,7 +2,10 @@
   "name": "@saas/api",
   "version": "1.0.0",
   "scripts": {
-    "dev": "tsx watch src/http/server.ts"
+    "dev": "yarn env:load tsx watch src/http/server.ts",
+    "db:migrate": "yarn env:load prisma migrate dev",
+    "db:studio": "yarn env:load prisma studio",
+    "env:load": "dotenv -e ../../.env --"
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
@@ -11,6 +14,7 @@
     "@fastify/swagger-ui": "^5.2.3",
     "@prisma/client": "6.16.1",
     "@saas/auth": "file:../../packages/auth",
+    "@saas/env": "file:../../packages/env",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.6.0",
     "fastify-plugin": "^5.0.1",
@@ -24,6 +28,7 @@
     "@saas/tsconfig": "file:../../config/typescript-config",
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^24.3.3",
+    "dotenv-cli": "^10.0.0",
     "prisma": "^6.16.1",
     "tsx": "^4.20.5"
   },
