setup do projeto Next.js

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,10 +35,8 @@
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
+  "prettier": "@saas/prettier",
   "eslintConfig": {
-    "extends": [
-      "@saas/eslint-config/node-js"
-    ]
-  },
-  "prettier": "@saas/prettier"
+    "extends": ["@saas/eslint-config/node.js"]
+  }
 }
