--- a/config/eslint-config/package.json
+++ b/config/eslint-config/package.json
@@ -3,20 +3,18 @@
   "version": "0.1.0",
   "type": "module",
   "private": true,
-  "exports": {
-    "./base": "./base.js",
-    "./next-js": "./next.js",
-    "./node-js": "./node.js"
-  },
+  "files": [
+    "base.js",
+    "next.js",
+    "node.js"
+  ],
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "@saas/prettier": "file:../prettier"
   },
+  "prettier": "@saas/prettier",
   "eslintConfig": {
-    "extends": [
-      "@saas/eslint-config/base"
-    ]
-  },
-  "prettier": "@saas/prettier"
+    "extends": ["./base.js"]
+  }
 }
