--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -10,14 +10,12 @@
     "@saas/tsconfig": "file:../../config/typescript-config",
     "@types/node": "^20.12.6"
   },
-  "eslintConfig": {
-    "extends": [
-      "@saas/eslint-config/library"
-    ]
-  },
-  "prettier": "@saas/prettier",
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.9.2",
     "zod": "^3.22.4"
+  },
+  "prettier": "@saas/prettier",
+  "eslintConfig": {
+    "extends": ["@saas/eslint-config/base.js"]
   }
 }
