--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,23 +8,33 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
+    "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@saas/eslint-config": "file:../../config/eslint-config",
+    "@saas/prettier": "file:../../config/prettier",
+    "@saas/tsconfig": "file:../../config/typescript-config",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
-    "@saas/eslint-config": "file:../../config/eslint-config",
-    "@saas/prettier": "file:../../config/prettier",
-    "@saas/tsconfig": "file:../../config/typescript-config"
+    "tw-animate-css": "^1.3.8",
+    "typescript": "^5"
   },
   "prettier": "@saas/prettier",
   "eslintConfig": {
-    "extends": ["@saas/eslint-config/next.js"]
+    "extends": [
+      "@saas/eslint-config/next.js"
+    ]
   }
 }
